--- a/EOLoginConsoleApp/packages.config
+++ b/EOLoginConsoleApp/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.1.0" targetFramework="net461" />
+  <package id="Autofac" version="5.2.0" targetFramework="net461" />
+  <package id="Autofac.Owin" version="5.0.1" targetFramework="net461" />
   <package id="Autofac.WebApi" version="3.1.0" targetFramework="net461" />
+  <package id="Autofac.WebApi2" version="5.0.0" targetFramework="net461" />
+  <package id="Autofac.WebApi2.Owin" version="5.0.0" targetFramework="net461" />
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
@@ -33,6 +36,7 @@
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.StaticFiles" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="2.2.4" targetFramework="net461" />
@@ -61,7 +65,7 @@
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.WebEncoders" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Owin" version="2.0.2" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
@@ -82,8 +86,9 @@
   <package id="System.Interactive.Async" version="3.2.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="Topshelf" version="4.2.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
