--- a/LoginController/packages.config
+++ b/LoginController/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="5.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http" version="2.2.2" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net461" />
@@ -22,7 +24,8 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" targetFramework="net461" />
 </packages>
