--- a/Persistence/packages.config
+++ b/Persistence/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="5.2.0" targetFramework="net461" />
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore" version="2.2.4" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.4" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.4" targetFramework="net461" />
@@ -30,5 +32,6 @@
   <package id="System.Interactive.Async" version="3.2.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
