--- a/LoginController/packages.config
+++ b/LoginController/packages.config
@@ -18,13 +18,14 @@
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
   <package id="PayPal" version="1.9.1" targetFramework="net461" />
-  <package id="Stripe.net" version="34.13.0" targetFramework="net461" />
+  <package id="Stripe.net" version="39.16.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" targetFramework="net461" />
